Fix sticky css on Safari.

--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,7 @@ input[type="submit"],input[type="button"] {
     background-color: rgba(255, 255, 255, 0.9);
     border-bottom: 1px solid #e6e6e6;
     position: sticky;
+    position: -webkit-sticky;
     top: 0;
     z-index: 1000;
 }
